<resources>
    <string name="app_name">Chat Story</string>
    <string name="live_chat_story">Live Chat Story</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="funny">FUNNY</string>
    <string name="browse_categories">Browse Categories</string>
    <string name="likes">Likes</string>
    <string name="you_are_not_signed_in">You are not signed in</string>
    <string name="sign_in">SIGN IN</string>
    <string name="rate_us">Rate Us</string>
    <string name="sayan">Sayan</string>
    <string name="mom">Mom</string>
    <string name="enter_your_message">Enter your message</string>
    <string name="reload_this_page">Reload This Page</string>
    <string name="oops_no_internet_connection_turn_on_internet">Oops!! No Internet Connection.Turn On Internet</string>
    <string name="profile">Profile</string>
    <string name="sign_in_to_save_your_preferences">Sign in to save your preferences</string>
    <string name="share">Share</string>
</resources>
