<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Profile">
    <com.google.android.material.appbar.AppBarLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true"
        android:background="@color/white"
        xmlns:app="http://schemas.android.com/apk/res-auto">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:background="@color/white"
            android:layout_height="?attr/actionBarSize"
            app:layout_scrollFlags="scroll|enterAlways">

            <TextView
                android:id="@+id/profile_tool"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawablePadding="5dp"
                android:textSize="16sp"
                android:text="Profile"
                android:textStyle="bold" />
        </androidx.appcompat.widget.Toolbar>
    </com.google.android.material.appbar.AppBarLayout>
    <ImageView
        android:id="@+id/i1"
        android:layout_marginTop="80sp"
        android:layout_centerHorizontal="true"
        android:background="@drawable/accout_image"
        android:layout_width="100dp"
        android:layout_height="100dp"/>
    <TextView
        android:id="@+id/t1"
        android:layout_below="@+id/i1"
        android:textStyle="bold"
        android:layout_marginTop="20sp"
        android:layout_centerHorizontal="true"
        android:text="@string/you_are_not_signed_in"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <TextView
        android:id="@+id/t2"
        android:layout_below="@+id/t1"
        android:textStyle="bold"
        android:layout_marginTop="20sp"
        android:layout_centerHorizontal="true"
        android:text="Sign in to save your preferences"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <Button
        android:id="@+id/b1"
        android:background="@color/green"
        android:textColor="@color/white"
        android:text="@string/sign_in"
        android:layout_marginTop="20sp"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/t2"
        android:layout_width="200sp"
        android:layout_height="wrap_content"/>
    <Button
        android:layout_alignParentBottom="true"
        android:layout_width="150sp"
        android:text="@string/rate_us"
        android:layout_margin="10sp"
        android:textColor="@color/white"
        android:background="@color/black"
        android:layout_height="wrap_content"/>
    <Button
        android:layout_alignParentRight="true"
        android:layout_margin="10sp"
        android:layout_alignParentBottom="true"
        android:layout_width="150sp"
        android:text="Share"
        android:textColor="@color/white"
        android:background="@color/black"
        android:layout_height="wrap_content"/>



</RelativeLayout>