<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:id="@+id/savage1"
    android:background="@drawable/hazy_image"
    android:layout_height="match_parent"
    tools:context=".SavageMom">
    <com.google.android.material.appbar.AppBarLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/toolbar"
        android:fitsSystemWindows="true"
        android:background="@color/white"
        xmlns:app="http://schemas.android.com/apk/res-auto">

        <androidx.appcompat.widget.Toolbar

            android:layout_width="match_parent"
            android:background="@color/white"
            android:layout_height="?attr/actionBarSize"
            app:layout_scrollFlags="scroll|enterAlways">
            <ImageView
                android:src="@drawable/ic_arrow_back_black_24dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <TextView
                android:id="@+id/loc_toolbar_TV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawablePadding="5dp"
                android:textSize="16sp"
                android:text="The Savage Mom"
                android:layout_marginStart="20sp"
                android:textStyle="bold"
                android:layout_marginLeft="10sp" />
        </androidx.appcompat.widget.Toolbar>
    </com.google.android.material.appbar.AppBarLayout>


        <TextView
            android:id="@+id/t1"
            android:text="@string/sayan"
            android:layout_below="@+id/toolbar"
            android:padding="10sp"
            android:layout_margin="10sp"
            android:textSize="20sp"
            android:background="@drawable/text_design"
            android:textColor="@color/white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:text="@string/mom"
            android:padding="10sp"
            android:layout_below="@+id/toolbar"
            android:layout_alignParentEnd="true"
            android:layout_margin="10sp"
            android:textSize="20sp"
            android:background="@drawable/text_design"
            android:textColor="@color/white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true" />


        <RelativeLayout
            android:id="@+id/touch_here"
            android:layout_above="@id/message"
            android:layout_below="@+id/t1"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
    <ListView
        android:id="@+id/list_view"
        android:scrollbars="none"
        android:transcriptMode="normal"
        android:dividerHeight="0sp"
        android:divider="@android:color/transparent"
        android:layout_marginTop="15sp"
        android:layout_marginLeft="15sp"
        android:layout_marginRight="10sp"
        android:layout_marginBottom="20sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

        </RelativeLayout>



    <EditText
        android:id="@+id/message"
        android:textColor="@color/white"
        android:layout_alignParentBottom="true"
        android:hint="@string/enter_your_message"
        android:layout_toLeftOf="@+id/send"
        android:layout_marginRight="5sp"
        android:textColorHint="@color/white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/send"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:src="@drawable/ic_send_black_24dp"
        android:tint="@color/white"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

</RelativeLayout>